# hls-nextgen-orchestration

./: README.md  pyproject.toml
cdk/: app.py  settings.py  stack.py
cdk/hls_constructs/: athena_logs_database.py  aws_batch_infra.py  aws_batch_job.py
docs/: architecture.excalidraw
src/: pyproject.toml
src/common/: __init__.py  aws_batch.py  granule_logger.py  models.py  pyproject.toml
src/common/src/common/: aws_batch.py  models.py
src/granule_entry/: handler.py
src/job_monitor/: handler.py
tests/: conftest.py  test_granule_entry.py  test_job_monitor.py  test_job_requeuer.py
tests/common/: test_aws_batch.py  test_granule_logger.py  test_models.py
tests/fixtures/: job_detail_failed_error.json  job_detail_failed_spot.json  job_state_change_failure.json
