[project]
name = "src"
version = "0.1.0"
description = "Common modules for lambdas"
requires-python = ">=3.11"
dependencies = [
    "boto_session_manager",
    "s3pathlib",
]

[project.optional-dependencies]
dev = [
    "boto3-stubs[batch,s3,sqs]>=1.37.36",
    "aws-lambda-powertools>=3.3.0",
    "aws-xray-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
